initial sitemap part and project created. had to rename project from Sitemap to Sitemapper due to strange collision with IIS (404.7 error) when Sitemap is use in the url when activating feature - suspect it's automatically blocked by iis which is annoying

--- a/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/Views/_ViewImports.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.Sitemapper/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @inherits OrchardCore.DisplayManagement.Razor.RazorPage<TModel>
 @using  OrchardCore.Entities
 @using OrchardCore.DisplayManagement.Razor
+@using ThisNetWorks.OrchardCore.Seo.Sitemapper.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, OrchardCore.DisplayManagement
