basic meta data in. have used views rather than injecting with resourcemanager from driver, as I think it provides better options for alternates if/when theming /overriding of meta data is required

--- a/src/ThisNetWorks.OrchardCore.Seo.Meta/Views/SeoMetaPart.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.Meta/Views/SeoMetaPart.cshtml
@@ -10,6 +10,14 @@
             seoPageTitleBuilder.SetTitle(Model.PageTitle);
         }
     }
-}
 
-@*<p>@Model.PageTitle</p>*@
+    if (!String.IsNullOrEmpty(Model.MetaDescription))
+    {
+        <meta asp-name="description" content="@Model.MetaDescription" />
+    }
+
+    if (!String.IsNullOrEmpty(Model.MetaKeywords))
+    {
+        <meta asp-name="keywords" content="@Model.MetaDescription" />
+    }
+}
