--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/_ViewImports.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/_ViewImports.cshtml
@@ -9,3 +9,4 @@
 @addTagHelper *, OrchardCore.Menu
 @addTagHelper *, OrchardCore.Contents
 
+@using ThisNetWorks.OrchardCore.Seo.TwitterMeta.ViewModels
