twitter meta part now the default part for all schema (MVP) does twitter and google schema. next needs opengraph tags

--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/TwitterMetaPart.Edit.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/TwitterMetaPart.Edit.cshtml
@@ -20,3 +20,8 @@
         <span class="hint">@T["Twitter ImageAlt"]</span>
     </div>
 </fieldset>
+<fieldset class="form-group">
+    <label asp-for="GoogleSchema">@T["Google Schema"]</label>
+    <textarea asp-for="GoogleSchema" rows="20" class="form-control content-preview-text"></textarea>
+    <span class="hint">@T["Google schema as json."]</span>
+</fieldset>
