--- a/src/ThisNetWorks.OrchardCore.Seo.Meta/Views/SeoMetaPart.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.Meta/Views/SeoMetaPart.cshtml
@@ -14,6 +14,10 @@
     {
         <meta asp-name="description" content="@Model.MetaDescription" />
     }
+    else
+    {
+        <meta asp-name="description" content="@Model.SeoMetaPart.ContentItem.DisplayText" />
+    }
     if (!String.IsNullOrEmpty(Model.MetaKeywords))
     {
         <meta asp-name="keywords" content="@Model.MetaDescription" />
