clean models folder

--- a/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/TwitterMetaPart.cshtml
+++ b/src/ThisNetWorks.OrchardCore.Seo.TwitterMeta/Views/TwitterMetaPart.cshtml
@@ -2,7 +2,7 @@
 @using ThisNetWorks.OrchardCore.Seo.Meta.Models
 @using OrchardCore.ContentManagement
 @using OrchardCore.Mvc.Core.Utilities
-@using OrchardCore.Autoroute.Model
+@using OrchardCore.Autoroute.Models
 
 @inject OrchardCore.ContentManagement.IContentManager ContentManager
 @{
